# pthread-win32

./: .gitattributes  .gitignore  .travis.yml  ANNOUNCE  BUGS  Bmakefile  CMakeLists.txt  CONTRIBUTORS  COPYING  ChangeLog  FAQ  GNUmakefile  GNUmakefile.in  MAINTAINERS  Makefile  Makefile.in  Makefile.vc  NEWS  NOTICE  Nmakefile  Nmakefile.tests  PROGRESS  README  README.Borland  README.CV  README.NONPORTABLE  README.WinCE  README.md  TODO  WinCE-PORT  _ptw32.h  _update_from_cvs.sh  acconfig.h  aclocal.m4  appveyor.yml  attr.c  attr_destroy.c  attr_getdetachstate.c  attr_getscope.c  attr_getstackaddr.c  (+275 more)
.github/workflows/: win64.yml
build.vc12/: pthreads.sln
build.vc12/pthreads/: pthreads.vcxproj
build.vc12/pthreads_dll/: pthreads_dll.vcxproj
build.vc12/pthreads_lib/: pthreads_lib.vcxproj
build.vc14/: pthreads.sln
build.vc14/pthreads_dll/: postbuild.bat  pthreads_dll.vcxproj
build.vc14/pthreads_lib/: pthreads_lib.vcxproj
build.vc15/pthreads_dll/: pthreads_dll.vcxproj
build.vc15/pthreads_lib/: pthreads_lib.vcxproj
build.vs/pthreads_dll/: postbuild.bat  pthreads_dll.vcxproj
build.vs/pthreads_lib/: pthreads_lib.vcxproj  pthreads_lib.vcxproj.filters
cmake/: common.cmake  config_h_in.cmake  get_version.cmake  target_arch.cmake  version.rc.in
docs/: ANNOUNCE.md  ChangeLog  ChangeLog.md  FAQ.md  NEWS.md  NOTICE.md  README.NONPORTABLE  README.NONPORTABLE.md  README.md  TODO.md
manual/: ChangeLog  PortabilityIssues.html  cpu_set.html  index.html  nonPortableIssues.html  pthreadCancelableWait.html  pthread_attr_init.html  pthread_attr_setstackaddr.html  pthread_attr_setstacksize.html  pthread_barrier_init.html  pthread_barrier_wait.html  pthread_barrierattr_init.html  pthread_barrierattr_setpshared.html  pthread_cancel.html  pthread_cleanup_push.html  pthread_cond_init.html  pthread_condattr_init.html  pthread_condattr_setpshared.html  pthread_create.html  pthread_delay_np.html  pthread_detach.html  pthread_equal.html  pthread_exit.html  pthread_getunique_np.html  pthread_getw32threadhandle_np.html  pthread_join.html  pthread_key_create.html  pthread_kill.html  pthread_mutex_init.html  pthread_mutexattr_init.html  pthread_mutexattr_setpshared.html  pthread_num_processors_np.html  pthread_once.html  pthread_rwlock_init.html  pthread_rwlock_rdlock.html  pthread_rwlock_timedrdlock.html  pthread_rwlock_timedwrlock.html  pthread_rwlock_unlock.html  pthread_rwlock_wrlock.html  pthread_rwlockattr_init.html  (+21 more)
tests/: Bmakefile  CMakeLists.txt  ChangeLog  Debug.2008.vcproj  Debug.2010.vcxproj  Debug.2010.vcxproj.filters  Debug.2012.vcxproj  Debug.2013.vcxproj  Debug.2015.vcxproj  Debug.2017.vcxproj  Debug.2019.vcxproj  Debug.dsp  Debug.ncb  Debug.opt  Debug.plg  GNUmakefile  GNUmakefile.in  Makefile  README  README.benchtests  SIZES.GC  SIZES.GCE  SIZES.VC  SIZES.VCE  Template.c  Wmakefile  affinity1.c  affinity2.c  affinity3.c  affinity4.c  affinity5.c  affinity6.c  barrier1.c  barrier2.c  barrier3.c  barrier4.c  barrier5.c  barrier6.c  benchlib.c  benchtest.h  (+164 more)
windows/VS2005/: pthread.2005.vcproj
windows/VS2010/: pthread.2010.vcxproj  pthread.2010.vcxproj.filters  pthread_lib.2010.vcxproj  pthread_lib.2010.vcxproj.filters
windows/VS2012/: pthread.2012.vcxproj  pthread.2012.vcxproj.filters  pthread_lib.2012.vcxproj  pthread_lib.2012.vcxproj.filters
windows/VS2013/: pthread.2013.vcxproj.filters  pthread_lib.2013.vcxproj
windows/VS2015/: Debug.2015.vcxproj  RCa06968  pthread.2015.vcxproj  pthread_lib.2015.vcxproj  pthread_lib.2015.vcxproj.filters
windows/VS2017/: Debug.2017.vcxproj  pthread.2017.sln  pthread.2017.vcxproj  pthread.2017.vcxproj.filters  pthread_lib.2017.vcxproj
windows/VS2019/: Debug.2019.vcxproj  Debug.2019.vcxproj.filters  Debug.vcxproj  Debug.vcxproj.filters  RCa06968  pthread.2019.vcxproj  pthread.2019.vcxproj.filters  pthread.sln  pthread.vcxproj  pthread_dll.rc  pthread_lib.2019.vcxproj  pthread_lib.2019.vcxproj.filters  pthread_lib.vcxproj
windows/VS2022/: pthread.2022.sln
