dnl Process this file with autoconf to produce a configure script.

AC_INIT(pthread.h)
AC_CANONICAL_HOST
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_CHECK_HEADERS([signal.h],signal_h=yes,)
if test x$signal_h = xyes
then
  AC_CACHE_CHECK([for sigset_t], p32_cv_sigset_t,
    AC_TRY_COMPILE([#include <signal.h>], [sigset_t x;],
      p32_cv_sigset_t=yes, p32_cv_sigset_t=no))

  if test x$p32_cv_sigset_t = xyes ; then
    AC_DEFINE(HAVE_SIGSET_T)
  fi
fi
AC_CACHE_CHECK(for _stdcall keyword, p32_cv_stdcall,
  AC_TRY_COMPILE( ,[int _stdcall foo();],
    p32_cv_stdcall=yes, p32_cv_stdcall=no))

if test x$p32_cv_stdcall = xyes ; then
  AC_DEFINE(STDCALL, _stdcall)
else
  AC_DEFINE(STDCALL,)
fi

AC_CHECK_HEADERS(windows.h,,AC_MSG_WARN([Target system must be Win32]))
AC_OUTPUT(Makefile)
