dnl Process this file with autoconf to produce a configure script.

AC_INIT(pthread.h)
AC_CANONICAL_HOST
AC_CONFIG_HEADER(config.h)
AC_PROG_CC

dnl Abort here if there is no windows.h
AC_CHECK_HEADER([windows.h],,AC_MSG_ERROR([Target system must be Win32]))

AC_CHECK_HEADER([signal.h],signal_h=yes,)
if test x$signal_h = xyes
then
  AC_CACHE_CHECK([for sigset_t], p32_cv_sigset_t,
    AC_TRY_COMPILE([#include <signal.h>], [sigset_t x;],
      p32_cv_sigset_t=yes, p32_cv_sigset_t=no))

  if test x$p32_cv_sigset_t = xyes ; then
    AC_DEFINE(HAVE_SIGSET_T)
  fi
fi

AC_OUTPUT(GNUmakefile)
